objects/DMAPP__DM_DVLS_Question_Answer_Response__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing a given user&apos;s selection or non-selection of a particular answer to an eLearning question.</description>
    <fields>
        <fullName>DMAPP__Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_DVLS_Question_Response__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Dealmaker Question Response</label>
        <referenceTo>DMAPP__DM_DVLS_Question_Response__c</referenceTo>
        <relationshipLabel>Test Question Answer Responses</relationshipLabel>
        <relationshipName>DM_DVLS_Question_Answer_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DVLS_Question_Answer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealmaker Question Answer</label>
        <referenceTo>DMAPP__DM_DVLS_Answer__c</referenceTo>
        <relationshipLabel>Test Question Answer Responses</relationshipLabel>
        <relationshipName>DVLS_Question_Answer_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Test Question Answer Response</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>eLearning Test Question Answer Response</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Question Answer Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>